# video-streaming-service

./: README.md
client/: README.md  pyproject.toml
client/src/: broadcaster.py  chat.py  main.py  menu.py  streaming_window.py  viewer.py
client/tests/: test_broadcaster.py  test_chat.py  test_viewer.py
server/: README.md  pyproject.toml
server/src/: __init__.py  chat_handler.py  main.py  transmission_handler.py  utils.py
server/tests/: test_chat_handler.py  test_transmission_handler.py  test_utils.py
twitch/: pyproject.toml
